<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/top_nav_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/user_profile"
            android:icon="@drawable/ic_account_nav"
            android:title="@string/profile" />

        <item
            android:id="@+id/user_events"
            android:icon="@drawable/ic_event_nav"
            android:title="@string/my_events" />

        <item
            android:id="@+id/user_posts"
            android:icon="@drawable/ic_post_nav"
            android:title="@string/my_posts" />

        <item
            android:id="@+id/settings_nav"
            android:icon="@drawable/ic_settings_nav"
            android:title="@string/settings" />

    </group>

    <group
        android:id="@+id/bottom_nav_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_nav"
            android:title="@string/log_out" />

    </group>

</menu>