<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/tag_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintEnd_toStartOf="@id/comment_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/topic_pic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/category_tag" />

        <TextView
            android:id="@+id/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@id/topic_pic"
            android:layout_toRightOf="@id/topic_pic"
            android:text="@string/default_sport"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/comment_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/event_subscribers_container"
        app:layout_constraintStart_toEndOf="@id/tag_container"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/comment_pic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/post_comment_icon"
            android:src="@drawable/comment" />

        <TextView
            android:id="@+id/comment_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@id/comment_pic"
            android:layout_toRightOf="@id/comment_pic"
            android:maxLines="2"
            android:text="@string/comment_num_default" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/event_subscribers_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/icon_more"
        app:layout_constraintStart_toEndOf="@id/comment_container"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/subscriber_pic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/event_going_icon"
            app:srcCompat="@drawable/ic_event_going" />

        <TextView
            android:id="@+id/subscriber_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/subscriber_pic"
            android:layout_toRightOf="@id/subscriber_pic"
            android:maxLines="2"
            android:text="@string/subscribers_num_default" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/icon_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:contentDescription="@string/horiz_menu_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_more_horiz" />

</androidx.constraintlayout.widget.ConstraintLayout>