<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="140dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <RelativeLayout
                android:id="@+id/event_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/event_pic"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/event_desc" />

                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@id/event_pic"
                    android:layout_toRightOf="@id/event_pic"
                    android:maxLines="3"
                    android:text="@string/default_event_date" />

                <ImageView
                    android:id="@+id/event_location_pic"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@id/event_date"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/location_pic_desc" />

                <TextView
                    android:id="@+id/event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/event_date"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/event_location_pic"
                    android:layout_toRightOf="@id/event_location_pic"
                    android:maxLines="4"
                    android:text="@string/default_event_location" />

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/top_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/event_container">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_avatar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/avatar_description"
                        android:scaleType="centerCrop">

                    </ImageView>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:maxLines="1"
                    android:text="@string/username_default"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toStartOf="@id/time"
                    app:layout_constraintStart_toEndOf="@id/cardview_avatar"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_time"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/main_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/top_container" />

            <RelativeLayout
                android:id="@+id/tag_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                app:layout_constraintEnd_toStartOf="@id/comment_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_text">

                <ImageView
                    android:id="@+id/topic_pic"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/category_tag" />

                <TextView
                    android:id="@+id/topic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toEndOf="@id/topic_pic"
                    android:layout_toRightOf="@id/topic_pic"
                    android:text="@string/default_sport"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/comment_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@id/event_subscribers_container"
                app:layout_constraintStart_toEndOf="@id/tag_container"
                app:layout_constraintTop_toBottomOf="@id/main_text">

                <ImageView
                    android:id="@+id/comment_pic"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/post_comment_icon"
                    android:src="@drawable/comment" />

                <TextView
                    android:id="@+id/comment_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toEndOf="@id/comment_pic"
                    android:layout_toRightOf="@id/comment_pic"
                    android:maxLines="2"
                    android:text="@string/comment_num_default" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/event_subscribers_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@id/icon_more"
                app:layout_constraintStart_toEndOf="@id/comment_container"
                app:layout_constraintTop_toBottomOf="@id/main_text">

                <ImageView
                    android:id="@+id/subscriber_pic"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/event_going_icon"
                    app:srcCompat="@drawable/ic_event_going" />

                <TextView
                    android:id="@+id/subscriber_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/subscriber_pic"
                    android:layout_toRightOf="@id/subscriber_pic"
                    android:maxLines="2"
                    android:text="@string/subscribers_num_default" />

            </RelativeLayout>

            <ImageButton
                android:id="@+id/icon_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:contentDescription="@string/horiz_menu_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:srcCompat="@drawable/ic_more_horiz" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>