<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/event_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/event_pic"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/event_desc" />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/event_pic"
                android:layout_toRightOf="@id/event_pic"
                android:maxLines="3"
                android:text="@string/default_event_date" />

        </RelativeLayout>

        <include
            android:id="@+id/top_container"
            layout="@layout/post_item_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/event_container" />

        <TextView
            android:id="@+id/main_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/top_container" />

        <LinearLayout
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/description_background"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/main_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/further_details" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/post_description" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/location_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_container">

            <ImageView
                android:id="@+id/event_location_pic"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/location_pic_desc" />

            <TextView
                android:id="@+id/event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/event_location_pic"
                android:layout_toRightOf="@id/event_location_pic"
                android:autoLink="map"
                android:maxLines="4"
                android:text="@string/default_event_location" />

        </RelativeLayout>

        <include
            layout="@layout/post_item_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/location_container" />

        <!-- Comments' view goes here -->

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


