<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regular_title_layout"
            style="@style/InputLayoutStyle"
            android:hint="@string/edittext_title"
            app:startIconDrawable="@drawable/ic_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regular_title_edittext"
                style="@style/InputEditTextStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regular_description_layout"
            style="@style/InputLayoutStyle"
            android:hint="@string/edittext_description"
            app:startIconDrawable="@drawable/ic_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regular_description_edittext"
                style="@style/InputEditTextStyle"
                android:minHeight="100dp"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regular_topic_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/topic"
            app:startIconDrawable="@drawable/ic_tag_start">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regular_topic_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/regular_save_post_button"
            style="@style/SavePostButtonStyle"
            android:background="@drawable/save_button_background"
            android:text="@string/add_post" />
    </LinearLayout>

</ScrollView>
